# social-downloader

./: .env.example  .gitignore  README.md  docker-compose.yaml  package-lock.json
backend/: Dockerfile  config.py  main.py  pyproject.toml  security.py  services.yml
backend/celery_tasks/: telegram_tasks.py
backend/config/: celery_config.py  settings.py
backend/db/: db.py  preferences.py  results.py  tasks.py  users.py
backend/models/: telegram.py  user.py
backend/routers/: auth.py  preferences.py  results.py  services.py  tasks.py  telegram.py  user.py
backend/telegram_api/: chats.py  exceptions.py  messages.py  telegram_client.py  users.py
db_init/: mongo-init.js
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.html  hooks.server.ts
frontend/src/lib/server/: helpers.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  CenterColumn.svelte  FeaturesColumn.svelte  Footer.svelte  Header.svelte  JobsColumn.svelte  LeftColumn.svelte  ModalAuth.svelte  ModalFeature.svelte  RightColumn.svelte  ServicesColumn.svelte  stores.ts
frontend/src/routes/api/redirect-server/: +server.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/signup/: +page.server.ts  +page.svelte
