[tool.poetry]
name = "social-dl-api"
version = "0.1.0"
description = "API for Social Downloader"
authors = ["Alejandro Pérez-Chirinos Rodríguez"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
fastapi-login = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
