[tool.poetry]
name = "social-dl-api"
version = "0.1.0"
description = "API for Social Downloader"
authors = ["Alejandro Pérez-Chirinos Rodríguez <a.perez-chirinos@alumnos.upm.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
fastapi-login = "^1.9.0"
python-telegram = "^0.18.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
